local docker solr exp successful... next join both solr and elastic in one exp locally