@@ -1,5 +1,4 @@
 ZOO_LOG_DIR=/var/lib/zookeeper
 ZOO_LOG4J_PROP="INFO,ROLLINGFILE"
-
-SERVER_JVMFLAGS="-Xms10G -Xmx10G -verbose:gc -XX:+PrintHeapAtGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime -Xloggc:$ZOO_LOG_DIR/zookeeper_gc.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=9 -XX:GCLogFileSize=20M"
+ZOOPIDFILE=$ZOO_LOG_DIR/zookeeper_server.pid
 JVMFLAGS="$JVMFLAGS -Djute.maxbuffer=50000000"
